--- a/assets/languages/ar-IQ.json
+++ b/assets/languages/ar-IQ.json
@@ -1,11 +1,44 @@
 {
-  "Ewaa": "ايواء",
-  "Sponsor": "كفالة",
-  "Urgent": "حالات طارئة",
-  "Donate now": "تبرّع الآن",
-  "Donate now!": "تبرّع الآن!",
-  "Check now": "تفحصها الآن",
+  "Explore": "إستكشاف",
+  "For you": "خصيصاً لك",
+  "Recently played": "شغلت مؤخراً",
+  "Recommended": "البومات موصى بها",
+  "Genres & Moods": "التصنيفات",
+  "Top Artists": "الفنانون الاكثر شهرة",
+  "Library": "المكتبة",
+  "Favorites": "المفضّلة",
+  "Search": "بحث",
+  "All Genres": "جميع التصنيفات",
+  "Search for songs, artists ...": "إبحث عن اغاني, البومات او فنانون ...",
+  "Settings": "الاعدادات",
+  "Account": "حسابي",
+  "Tae Ebison": "يارا احمد",
+  "Offline mode": "وضع الاوفلاين",
+  "Only downloaded content will be available": "عرض المحتوى الذي تم تحميله فقط",
   "Connect with us": "تواصل معنا",
+  "About us": "عن التطبيق",
+  "Get to know more about the app": "تعرف على التطبيق وكيف تم انشاءه",
+  "Terms & Conditions": "الشروط والبنود",
+  "Read our terms and conditions of how to use the app": "قراءة الشروط والنبود الخاصة بكيفية استخدام التطبيق",
+  "Follow us on Instagram": "تابعنا على الانستغرام",
+  "Be in touch with us on social media": "كن على تواصل معنا على مواقع التواصل الاجتماعي",
+  "Trending": "الرائجة",
+  "Hot this week": "جديد الاسبوع",
+  "Top pop music": "افضل اغاني البوب",
+  "Best of all time": "الافضل في جميع الاوقات",
+
+  "Now playing from": "يتم التشغيل من",
+  "About": "عن التطبيق",
+  "About": "عن التطبيق",
+  "About": "عن التطبيق",
+  "About": "عن التطبيق",
+  "About": "عن التطبيق",
+  "About": "عن التطبيق",
+
+
+
+
+  "Check now": "تفحصها الآن",
   "Relief proposal": "تقديم طلب استغاثة",
   "160 Case": "160 حالة",
   "Province": "المحافظة",
@@ -52,9 +85,7 @@
   "Enter your name correctly, please": "فضلاً, ادخل اسماً صحيحاً",
   "Sign In": "تسجيل الدخول",
   "Logout": "تسجيل الخروج",
-  "Terms & Conditions": "الشروط والبنود",
   "I agree to the terms & conditions including publishing my name in public to get help as soon as possible.": "أوافق على الشروط والأحكام بما في ذلك نشر اسمي علنًا للحصول على المساعدة في أقرب وقت ممكن.",
-  "About": "عن التطبيق",
   "See All": "المزيد",
   "My Account": "حسابي",
   "Profile": "الملف الشخصي",
@@ -64,11 +95,13 @@
   "Type": "النوع",
   "hintEmail": "البريد الالكتروني",
   "hintName": "الاسم الكامل",
+  "Password": "رمز المرور",
   "hintPassword": "رمز المرور",
   "hintPasswordConfirm": "اعد كتابة رمز المرور",
   "Forgot Password?": "هل نسيت رمز المرور؟",
   "Don't have an account?": "لا تملك حساب؟ ",
   "Sign Up": "انشاء حساب",
+  "Create a free account": "انشاء حساب مجاني",
   "Register": "انشاء حساب",
   "Do you have an account?": "هل تملك حساب؟",
   "Login": "تسجيل الدخول",
