--- a/assets/languages/ku-IQ.json
+++ b/assets/languages/ku-IQ.json
@@ -1,84 +1,43 @@
 {
-  "Ewaa": "ايواء",
-  "Sponsor": "كفالة",
-  "Urgent": "حالات طارئة",
-  "Donate now": "تبرّع الآن",
-  "Donate now!": "تبرّع الآن!",
-  "Check now": "تفحصها الآن",
+  "Explore": "إستكشاف",
+  "For you": "خصيصاً لك",
+  "Recently played": "شغلت مؤخراً",
+  "Recommended": "البومات موصى بها",
+  "Genres & Moods": "التصنيفات",
+  "Top Artists": "الفنانون الاكثر شهرة",
+  "Library": "المكتبة",
+  "Favorites": "المفضّلة",
+  "Search": "بحث",
+  "All Genres": "جميع التصنيفات",
+  "Search for songs, artists ...": "إبحث عن اغاني, البومات او فنانون ...",
+  "Settings": "الاعدادات",
+  "Account": "حسابي",
+  "Tae Ebison": "يارا احمد",
+  "Offline mode": "وضع الاوفلاين",
+  "Only downloaded content will be available": "عرض المحتوى الذي تم تحميله فقط",
   "Connect with us": "تواصل معنا",
-  "Relief proposal": "تقديم طلب استغاثة",
-  "160 Case": "160 حالة",
-  "Province": "المحافظة",
-  "Area": "المنطقة",
-  "Family name": "اسم العائلة",
-  "Family members": "عدد افراد العائلة",
-  "Description": "الوصف",
-  "Write your message here...": "اكتب رسالتك هنا...",
-  "Submit": "إرسال",
-  "Submit proposal": "إرسال الطلب",
-  "Donor info": "معلومات المتبرّع",
-  "Email": "البريد الالكتروني",
-  "Phone number": "رقم الهاتف",
-  "Amount": "المبلغ",
-  "Donate by cash": "تبرع نقداً",
-  "Donate by credit card": "تبرع بواسطة كارد",
-  "Nearest point": "اقرب نقطة دالة",
-  "Card number": "رقم البطاقة",
-  "Year": "السنة",
-  "Month": "الشهر",
-  "CVV": "الرقم السري",
-  "General info": "معلومات عامة",
-  "Age": "العمر",
-  "Gender": "الجنس",
-  "Head of family name": "اسم رب الاسرة",
-  "Location info": "معلومات السكن",
-  "Case type": "نوع الحالة",
-  "Needy Families": "عوائل غير مكفولة",
-  "Medical conditions": "حالات مرضية",
-  "General cases": "الحالات الغير المكفولة",
-  "Case": "الحالة",
-  "Amount Required": "المبلغ المطلوب",
-  "Amount Donated": "المبلغ المتبرع به",
-  "Guaranteed GeneralCases": "الحالات المكفولة",
-  "Guaranteed": "حالة مكفولة",
-  "Waiting for help": "حالة بأنتظار المساعدة",
-  "Help1": "ساعدنا في كفالة المحتاجين واليتامى",
-  "Help2": "بعض الحالات الحرجة قد لا يمكنها الانتظار",
-  "Send": "ارسال الرسالة",
-  "Other": "شيء آخر",
-  "Phone number is not correct": "رقم الهاتف غير صحيح",
-  "Please enter valid email": "عنوان البريد الالكتروني غير صحيحر",
-  "Choose one": "أختر واحداً على الاقل",
-  "Enter your name correctly, please": "فضلاً, ادخل اسماً صحيحاً",
-  "Sign In": "تسجيل الدخول",
-  "Logout": "تسجيل الخروج",
+  "About us": "عن التطبيق",
+  "Get to know more about the app": "تعرف على التطبيق وكيف تم انشاءه",
   "Terms & Conditions": "الشروط والبنود",
-  "I agree to the terms & conditions including publishing my name in public to get help as soon as possible.": "أوافق على الشروط والأحكام بما في ذلك نشر اسمي علنًا للحصول على المساعدة في أقرب وقت ممكن.",
-  "About": "عن التطبيق",
-  "See All": "المزيد",
-  "My Account": "حسابي",
-  "Profile": "الملف الشخصي",
+  "Read our terms and conditions of how to use the app": "قراءة الشروط والنبود الخاصة بكيفية استخدام التطبيق",
+  "Follow us on Instagram": "تابعنا على الانستغرام",
+  "Be in touch with us on social media": "كن على تواصل معنا على مواقع التواصل الاجتماعي",
+  "Trending": "الرائجة",
+  "Hot this week": "جديد الاسبوع",
+  "Top pop music": "افضل اغاني البوب",
+  "Best of all time": "الافضل في جميع الاوقات",
+  "Now playing from": "يتم التشغيل من",
+  "Email": "البريد الالكتروني",
   "Full name": "الاسم الكامل",
-  "Name": "الاسم",
-  "John Doe": "احمد محمد",
-  "Type": "النوع",
   "hintEmail": "البريد الالكتروني",
   "hintName": "الاسم الكامل",
+  "Password": "رمز المرور",
   "hintPassword": "رمز المرور",
-  "hintPasswordConfirm": "اعد كتابة رمز المرور",
   "Forgot Password?": "هل نسيت رمز المرور؟",
   "Don't have an account?": "لا تملك حساب؟ ",
   "Sign Up": "انشاء حساب",
+  "Create a free account": "انشاء حساب مجاني",
   "Register": "انشاء حساب",
   "Do you have an account?": "هل تملك حساب؟",
-  "Login": "تسجيل الدخول",
-  "Go": "انطلق",
-  "head1": "ايواء",
-  "sub1": "ايواء هو مشروع لأغاثة العوائل المتعففة وكفالة اليتامى عن طريق جمع التبرعات من المجتمع ومن الطيبين المبادرين للخير.",
-  "head2": "مساعدة العوائل الفقيرة",
-  "sub2": "احدى اهم اهداف مشروعنا هي كفالة العوائل المتعففة والفقيرة التي تحتاج الى المساعدة وتوفير احتياجاتها.",
-  "head3": "الحالات الحرجة والمرضية",
-  "sub3": "قد يصعب على بعض الحالات المجتمعية والمرضية ان يتوفر لهم احتياجاتهم خاصة, لذا نقوم بتوفير لهم هذه الاحتياجات كأن تكون ادوية او اجهزة طبية ضرورية.",
-  "head4": "جمع التبرعات",
-  "sub4": "اهم مايميز المشروع هو الدقة بجمع المعلومات وتوفير الامان والخصوصية للمتبرعين وللعوائل المسجلة.\nماذا تنتظر؟ دعنا نبدأ !"
+  "Login": "تسجيل الدخول"
 }
